@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-09-26T00:35:56Z",
-  "count_outdated" : 4539,
-  "uniques_outdated" : 807,
+  "timestamp" : "2024-09-27T00:36:20Z",
+  "count_outdated" : 4557,
+  "uniques_outdated" : 810,
   "count" : 4611,
   "uniques" : 835,
   "views" : [
-    {
-      "timestamp": "2024-09-12T00:00:00Z",
-      "count": 18,
-      "count_minmax": [ 14, 18 ],
-      "count_decinc": [ 0, 18 ],
-      "uniques": 3,
-      "uniques_minmax": [ 1, 3 ],
-      "uniques_decinc": [ 0, 3 ]
-    },
     {
       "timestamp": "2024-09-13T00:00:00Z",
       "count": 1,
