@@ -1,12 +1,7 @@
 {
-  "count": 72,
-  "uniques": 27,
+  "count": 54,
+  "uniques": 24,
   "views": [
-    {
-      "timestamp": "2024-09-12T00:00:00Z",
-      "count": 18,
-      "uniques": 3
-    },
     {
       "timestamp": "2024-09-13T00:00:00Z",
       "count": 1,
