@@ -1,3 +1,12 @@
+2024-09-27T00:36:20Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11062418986 # 552
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-27
+* notice: last 14d: unq all: 24 54
+* notice: prev accum: outdated-unq outdated-all / unq all: 807 4539 / 835 4611
+* notice: next accum: outdated-unq outdated-all / unq all: 810 4557 / 835 4611
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-09-12] / []
+
 2024-09-26T00:35:56Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11043337780 # 550
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-26
